# Documenter

./: .gitignore  ANALYSIS.md  CLOUD_NATURAL_LANGUAGE_GUIDE.md  CURSOR_LOCAL_SETUP.md  CURSOR_SETUP.md  INSTALLATION_GUIDE.md  LICENSE  LOCAL_MCP_SOLUTION.md  PROJECT_CONTEXT_SOLUTION.md  QUALITY_IMPROVEMENTS_SUMMARY.md  README.md  README_GENERATED.md  SOLUTION_SUMMARY.md  USAGE_GUIDE.md  check_status.py  companion.py  cursor-mcp-config-batch.json  deploy_render.md  local_server.py  main.py  pyproject.toml  render.yaml  requirements.txt  run_mcp.bat  run_mcp.sh  server.py  setup.py  test_analysis.json  test_deployment.py  test_documenter.py  test_local_server.py  test_mcp_protocol.py  test_portfolio.py  test_project_context.py  verify_deployment.py
docs/: DEPLOYMENT_COMPARISON.md  PROJECT_ANALYSIS.md  PROJECT_PLAN.md  README.md  TASKLIST.md
docs/deployment/: DEPLOYMENT_SUMMARY.md  manual_render_setup.md
